fix: fix layout issue on thread sidebar

--- a/packages/ui/src/message-room-view-header/message-room-view-header.module.css
+++ b/packages/ui/src/message-room-view-header/message-room-view-header.module.css
@@ -1,6 +1,6 @@
 .plugin__header {
   /* width: inherit; */
-  height: 42px;
+  height: 41px;
   background-color: #00b87c;
   color: #fff;
   box-sizing: border-box;
